Fix an unrelated design issue on the Notifications page (checkbox were not aligned)

--- a/src/Umbraco.Web.UI.Client/src/less/main.less
+++ b/src/Umbraco.Web.UI.Client/src/less/main.less
@@ -599,7 +599,11 @@ height:1px;
 }
 
 .inline {
-	display: inline;
+    display: inline;
+}
+
+.flex {
+    display: flex;
 }
 
 
